# interaction_sim

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
config/: 10-interaction_sim.yml  20-interaction_sim.yml  camera_info.yaml  simulator.perspective
launch/: simulator.launch.py
